# AstroTool-NpfCalc

./: Cargo.toml  README.md  build_dist.ps1
.github/workflows/: release.yml
src/: main.rs
src/i18n/: en.ftl  fr.ftl
