[package]
name = "AstroTool-NpfCalc"
version = "0.1.0"
edition = "2024"
authors = ["Junie <junie@jetbrains.com>"]
description = "Calculateur de temps de pose NPF pour l'astrophotographie."
license = "MIT"
repository = "https://github.com/user/AstroTool-NpfCalc"
readme = "README.md"

[dependencies]
eframe = { version = "0.24.1", features = ["persistence"] }
once_cell = "1.21.3"
plotters = { version = "0.3.5" }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shlobj", "libloaderapi", "windef", "winbase", "wingdi", "winnt", "winerror"] }
[package.metadata.packager]
product_name = "AstroTool-NpfCalc"
identifier = "com.astrotool.npfcalc"
category = "Education"
authors = ["Junie <junie@jetbrains.com>"]
description = "Calculateur de temps de pose NPF pour l'astrophotographie."
# Formats de sortie (NSIS pour l'installateur Windows EXE)
formats = ["nsis"]
